update cleaning data di notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1481,18 +1481,12 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "mengganti nama kolom agar lebih mudah dibaca"
-      ]
-    },
-    {
       "cell_type": "code",
-      "execution_count": 90,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
+        "# mengganti nama kolom pada table df_day agar lebih mudah dibaca\n",
         "df_day.rename(columns={'dteday':'date','yr':'year','mnth':'month','weekday':'weekday', \n",
         "                       'weathersit':'weather_situation', 'windspeed':'wind_speed',\n",
         "                       'cnt':'count_cr','hum':'humidity'},inplace=True)"
@@ -1588,49 +1582,51 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Musim\n",
+        "# mengonversi isi kolom agar mudah dimengerti\n",
+        "\n",
+        "# konversi season\n",
         "season_labels = {1: 'Spring', 2: 'Summer', 3: 'Fall', 4: 'Winter'}\n",
         "df_day['season'] = df_day['season'].map(season_labels)\n",
         "\n",
-        "# Tahun\n",
+        "# konversi year\n",
         "year_labels = {0: '2011', 1: '2012'}\n",
         "df_day['year'] = df_day['year'].map(year_labels)\n",
         "\n",
-        "# Bulan\n",
+        "# konversi month\n",
         "month_labels = {1: 'Januari', 2: 'Februari', 3: 'Maret', 4: 'April', 5: 'Mei', 6: 'Juni',\n",
         "                7: 'Juli', 8: 'Agustus', 9: 'September', 10: 'Oktober', 11: 'November', 12: 'Dessember'}\n",
         "df_day['month'] = df_day['month'].map(month_labels)\n",
         "\n",
-        "# Hari\n",
+        "# konversi hari\n",
         "weekday_labels = {0: 'Minggu', 1: 'Senin', 2: 'Selasa', 3: 'Rabu', 4: 'Kamis', 5: 'Jumat', 6: 'Sabtu'}\n",
         "df_day['weekday'] = df_day['weekday'].map(weekday_labels)\n",
         "\n",
-        "# Hari Kerja\n",
+        "# konversi workingday\n",
         "workingday_labels = {0: 'Libur/Akhir Pekan', 1: 'Hari Kerja'}\n",
         "df_day['workingday'] = df_day['workingday'].map(workingday_labels)\n",
         "\n",
-        "# Libur\n",
+        "# konversi holiday\n",
         "holiday_labels = {0: 'Tidak', 1: 'Ya'}\n",
         "df_day['holiday'] = df_day['holiday'].map(holiday_labels)\n",
         "\n",
-        "# Kondisi Cuaca\n",
+        "# konversi weather situation\n",
         "weathersit_labels = {1: 'Cerah', 2: 'Mendung', 3: 'Hujan Ringan', 4: 'Hujan Lebat'}\n",
         "df_day['weather_situation'] = df_day['weather_situation'].map(weathersit_labels)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "df_day['temp'] = (df_day['temp']) * 41                 # Suhu asli dalam derajat C\n",
         "df_day['atemp'] = (df_day['atemp']) * 50               # Suhu terasa dalam derajat C\n",
-        "df_day['humidity'] = (df_day['humidity']) * 100                  # Kelembaban dalam %\n",
+        "df_day['humidity'] = (df_day['humidity']) * 100        # Kelembaban dalam %\n",
         "df_day['wind_speed'] = (df_day['wind_speed']) * 67     # Kecepatan angin dalam km/h"
       ]
     },
