update cleaning data di notebook.ipynb

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1624,6 +1624,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# menghitung suhu, kelembaban, dan kecepatan angin\n",
         "df_day['temp'] = (df_day['temp']) * 41                 # Suhu asli dalam derajat C\n",
         "df_day['atemp'] = (df_day['atemp']) * 50               # Suhu terasa dalam derajat C\n",
         "df_day['humidity'] = (df_day['humidity']) * 100        # Kelembaban dalam %\n",
