Update pertanyaan bisnis dan dasboard

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,10 +28,11 @@
       },
       "source": [
         "Pertama-tama, kita akan mendefinisikan berbagai pertanyaan bisnis yang akan dibutuhkan saat eksplorasi data.\n",
-        "- Pertanyaan 1: Faktor apa yang paling mempengaruhi jumlah peminjaman sepeda?\n",
-        "- Pertanyaan 2: Apa dampak dari kondisi cuaca terhadap jumlah peminjaman sepeda?\n",
-        "- Pertanyaan 3: Bagaimana pola penggunaan sepeda bervariasi antara pengguna kasual dan pengguna terdaftar?\n",
-        "- Pertanyaan 4: Bagaimana tren penggunaan sepeda berubah sepanjang tahun, dan apakah ada musim atau bulan tertentu dengan permintaan yang lebih tinggi?"
+        "- Pertanyaan 1: Bagaimana tren jumlah peminjaman sepeda dalam beberapa tahun terakhir? FIX\n",
+        "- Pertanyaan 2: Seberapa berpengaruh kondisi cuaca, suhu, dan kecepatan angin terhadap jumlah peminjaman sepeda? FIX\n",
+        "- Pertanyaan 3: Pada jam berapa permintaan peminjaman sepeda paling tinggi? FIX\n",
+        "- Pertanyaan 4: Bulan apa saja yang paling banyak dan paling sedikit diminati bagi penyewa sepeda? FIX\n",
+        "- Pertanyaan 5: "
       ]
     },
     {
@@ -45,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 126,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
@@ -77,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 127,
       "metadata": {},
       "outputs": [
         {
@@ -242,7 +243,7 @@
               "4  1600  "
             ]
           },
-          "execution_count": 98,
+          "execution_count": 127,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -255,7 +256,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 128,
       "metadata": {},
       "outputs": [
         {
@@ -419,7 +420,7 @@
               "4           1  0.24  0.2879  0.75        0.0       0           1    1  "
             ]
           },
-          "execution_count": 99,
+          "execution_count": 128,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -459,7 +460,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 129,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -771,7 +772,7 @@
               "max     8714.000000  "
             ]
           },
-          "execution_count": 100,
+          "execution_count": 129,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -783,7 +784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 130,
       "metadata": {},
       "outputs": [
         {
@@ -830,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 131,
       "metadata": {},
       "outputs": [
         {
@@ -855,7 +856,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 102,
+          "execution_count": 131,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -874,7 +875,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 132,
       "metadata": {},
       "outputs": [
         {
@@ -906,7 +907,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 133,
       "metadata": {},
       "outputs": [
         {
@@ -1228,7 +1229,7 @@
               "max       886.000000    977.000000  "
             ]
           },
-          "execution_count": 104,
+          "execution_count": 133,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1240,7 +1241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 134,
       "metadata": {},
       "outputs": [
         {
@@ -1288,7 +1289,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 135,
       "metadata": {},
       "outputs": [
         {
@@ -1314,7 +1315,7 @@
               "dtype: int64"
             ]
           },
-          "execution_count": 106,
+          "execution_count": 135,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1333,7 +1334,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 136,
       "metadata": {},
       "outputs": [
         {
@@ -1400,7 +1401,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 137,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1420,7 +1421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 138,
       "metadata": {
         "id": "jVnYpprE9Evz"
       },
@@ -1435,7 +1436,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 139,
       "metadata": {},
       "outputs": [
         {
@@ -1482,19 +1483,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 140,
       "metadata": {},
       "outputs": [],
       "source": [
         "# mengganti nama kolom pada table df_day agar lebih mudah dibaca\n",
         "df_day.rename(columns={'dteday':'date','yr':'year','mnth':'month','weekday':'weekday', \n",
         "                       'weathersit':'weather_situation', 'windspeed':'wind_speed',\n",
-        "                       'cnt':'count_cr','hum':'humidity'},inplace=True)"
+        "                       'cnt':'count_rental','hum':'humidity'},inplace=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 141,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1532,7 +1533,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 142,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1545,11 +1546,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 143,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# kategorikan hari berdasarkan weekends dan weekdays dengan membuat kolom baru 'category_days'\n",
+        "# kategorikan hari berdasarkan weekends atau weekdays dengan membuat kolom baru 'category_days'\n",
         "def get_category_days(weekday_labels):\n",
         "     if weekday_labels in ['Saturday', 'Sunday']:\n",
         "          return 'weekends'\n",
@@ -1575,7 +1576,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 144,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1588,7 +1589,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 145,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1601,7 +1602,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 117,
+      "execution_count": 146,
       "metadata": {},
       "outputs": [
         {
@@ -1649,19 +1650,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 118,
+      "execution_count": 147,
       "metadata": {},
       "outputs": [],
       "source": [
         "# mengganti nama kolom pada table df_day agar lebih mudah dibaca\n",
         "df_hour.rename(columns={'dteday':'date','yr':'year','mnth':'month','weekday':'weekday', \n",
         "                       'weathersit':'weather_situation', 'windspeed':'wind_speed',\n",
-        "                       'cnt':'count_cr','hum':'humidity'},inplace=True)"
+        "                       'cnt':'count_rental','hum':'humidity'},inplace=True)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 119,
+      "execution_count": 148,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1699,7 +1700,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 149,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1712,11 +1713,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 121,
+      "execution_count": 150,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# kategorikan hari berdasarkan weekends dan weekdays dengan membuat kolom baru 'category_days'\n",
+        "# kategorikan hari berdasarkan weekends atau weekdays dengan membuat kolom baru 'category_days'\n",
         "def get_category_days(weekday_labels):\n",
         "     if weekday_labels in ['Saturday', 'Sunday']:\n",
         "          return 'weekends'\n",
@@ -1724,6 +1725,15 @@
         "          return 'weekdays'\n",
         "\n",
         "df_hour['category_days'] = df_hour['weekday'].apply(get_category_days)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 151,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# klasifikasikan kelembaban berdasarkan terlalu lembab, ideal, terlalu kering"
       ]
     },
     {
@@ -1746,7 +1756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 122,
+      "execution_count": 152,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -1774,7 +1784,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 123,
+      "execution_count": 153,
       "metadata": {
         "id": "e9CQCZjk8DC2"
       },
@@ -1815,7 +1825,7 @@
               "      <th>wind_speed</th>\n",
               "      <th>casual</th>\n",
               "      <th>registered</th>\n",
-              "      <th>count_cr</th>\n",
+              "      <th>count_rental</th>\n",
               "      <th>category_days</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -1939,15 +1949,15 @@
               "3             Clear   8.200000  10.60610   59.0435   10.739832     108   \n",
               "4             Clear   9.305237  11.46350   43.6957   12.522300      82   \n",
               "\n",
-              "   registered  count_cr category_days  \n",
-              "0         654       985      weekends  \n",
-              "1         670       801      weekends  \n",
-              "2        1229      1349      weekdays  \n",
-              "3        1454      1562      weekdays  \n",
-              "4        1518      1600      weekdays  "
+              "   registered  count_rental category_days  \n",
+              "0         654           985      weekends  \n",
+              "1         670           801      weekends  \n",
+              "2        1229          1349      weekdays  \n",
+              "3        1454          1562      weekdays  \n",
+              "4        1518          1600      weekdays  "
             ]
           },
-          "execution_count": 123,
+          "execution_count": 153,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -1958,7 +1968,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 124,
+      "execution_count": 154,
       "metadata": {},
       "outputs": [
         {
@@ -1998,7 +2008,7 @@
               "      <th>wind_speed</th>\n",
               "      <th>casual</th>\n",
               "      <th>registered</th>\n",
-              "      <th>count_cr</th>\n",
+              "      <th>count_rental</th>\n",
               "      <th>category_days</th>\n",
               "    </tr>\n",
               "  </thead>\n",
@@ -2127,15 +2137,15 @@
               "3             Clear  9.84  14.395      75.0         0.0       3          10   \n",
               "4             Clear  9.84  14.395      75.0         0.0       0           1   \n",
               "\n",
-              "   count_cr category_days  \n",
-              "0        16      weekends  \n",
-              "1        40      weekends  \n",
-              "2        32      weekends  \n",
-              "3        13      weekends  \n",
-              "4         1      weekends  "
+              "   count_rental category_days  \n",
+              "0            16      weekends  \n",
+              "1            40      weekends  \n",
+              "2            32      weekends  \n",
+              "3            13      weekends  \n",
+              "4             1      weekends  "
             ]
           },
-          "execution_count": 124,
+          "execution_count": 154,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -2146,7 +2156,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 125,
+      "execution_count": 155,
       "metadata": {},
       "outputs": [
         {
@@ -2164,7 +2174,7 @@
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[125], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_day\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mseason\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcnt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39mreset_index()\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcnt\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
+            "Cell \u001b[1;32mIn[155], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mdf_day\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgroupby\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mseason\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcnt\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mmean()\u001b[38;5;241m.\u001b[39mreset_index()\u001b[38;5;241m.\u001b[39msort_values(by\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcnt\u001b[39m\u001b[38;5;124m'\u001b[39m, ascending\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
             "File \u001b[1;32md:\\Program_Files\\Anaconda\\envs\\datascience\\Lib\\site-packages\\pandas\\core\\groupby\\generic.py:1951\u001b[0m, in \u001b[0;36mDataFrameGroupBy.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1944\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(key) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   1945\u001b[0m     \u001b[38;5;66;03m# if len == 1, then it becomes a SeriesGroupBy and this is actually\u001b[39;00m\n\u001b[0;32m   1946\u001b[0m     \u001b[38;5;66;03m# valid syntax, so don't raise\u001b[39;00m\n\u001b[0;32m   1947\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1948\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot subset columns with a tuple with more than one element. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1949\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUse a list instead.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   1950\u001b[0m     )\n\u001b[1;32m-> 1951\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
             "File \u001b[1;32md:\\Program_Files\\Anaconda\\envs\\datascience\\Lib\\site-packages\\pandas\\core\\base.py:244\u001b[0m, in \u001b[0;36mSelectionMixin.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    242\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m    243\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m key \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj:\n\u001b[1;32m--> 244\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mColumn not found: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    245\u001b[0m     ndim \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj[key]\u001b[38;5;241m.\u001b[39mndim\n\u001b[0;32m    246\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_gotitem(key, ndim\u001b[38;5;241m=\u001b[39mndim)\n",
             "\u001b[1;31mKeyError\u001b[0m: 'Column not found: cnt'"
@@ -2252,13 +2262,18 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iWhnzsJGYUCO"
-      },
-      "outputs": [],
-      "source": []
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 1. Analisis RFM"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### 2. Analisis Clustering"
+      ]
     },
     {
       "cell_type": "markdown",
