update assesing data: memperbaiki penjelasan dan storytelling

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -28,11 +28,11 @@
       },
       "source": [
         "Pertama-tama, kita akan mendefinisikan berbagai pertanyaan bisnis yang akan dibutuhkan saat eksplorasi data.\n",
-        "- Pertanyaan 1: Bagaimana tren jumlah peminjaman sepeda dalam beberapa tahun terakhir? FIX\n",
-        "- Pertanyaan 2: Seberapa berpengaruh kondisi cuaca, suhu, dan kecepatan angin terhadap jumlah peminjaman sepeda? FIX\n",
-        "- Pertanyaan 3: Pada pukul berapa permintaan peminjaman sepeda paling tinggi dan paling rendah? FIX\n",
-        "- Pertanyaan 4: Bulan apa saja yang paling banyak dan paling sedikit diminati bagi penyewa sepeda? FIX\n",
-        "- Pertanyaan 5: "
+        "- `Pertanyaan 1:` Bagaimana tren jumlah peminjaman sepeda dalam beberapa tahun terakhir? FIX\n",
+        "- `Pertanyaan 2:` Seberapa berpengaruh kondisi cuaca, suhu, dan kecepatan angin terhadap jumlah peminjaman sepeda? FIX\n",
+        "- `Pertanyaan 3:` Pada pukul berapa permintaan peminjaman sepeda paling tinggi dan paling rendah? FIX\n",
+        "- `Pertanyaan 4:` Bulan apa saja yang paling banyak dan paling sedikit diminati bagi penyewa sepeda? FIX\n",
+        "- `Pertanyaan 5:` "
       ]
     },
     {
@@ -439,8 +439,8 @@
       },
       "source": [
         "**Insight:**\n",
-        "- Data df_day lebih cocok untuk menganalisis tren jangka panjang, seperti pola mingguan, bulanan, musiman, atau tahunan, karena data sudah terakumulasi per hari.\n",
-        "- Data df_hour lebih sesuai untuk melihat pola penggunaan sepeda pada jam tertentu dalam sehari, memungkinkan analisis terhadap waktu-waktu dengan tingkat penyewaan tertinggi atau terendah."
+        "- Data `df_day` lebih cocok untuk menganalisis tren jangka panjang, seperti pola mingguan, bulanan, musiman, atau tahunan, karena data sudah terakumulasi per hari.\n",
+        "- Data `df_hour` lebih sesuai untuk melihat pola penggunaan sepeda pada jam tertentu dalam sehari, memungkinkan analisis terhadap waktu-waktu dengan tingkat penyewaan tertinggi atau terendah."
       ]
     },
     {
@@ -456,12 +456,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Menilai Data df_day"
+        "#### Menilai Data df_day (FIX)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Memeriksa `seluruh parameter termasuk non-numerik` yang terdapat pada table `df_day`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 332,
+      "execution_count": null,
       "metadata": {
         "id": "ax-3tEjc9Cj1"
       },
@@ -779,13 +786,26 @@
         }
       ],
       "source": [
-        "# memeriksa seluruh parameter statistik termasuk kolom non-numerik yang terdapat didalam df_day\n",
         "df_day.describe(include='all')"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Berdasarkan deskripsi statistik untuk table `df_day` diatas, dapat dilihat bahwa tidak terdapat parameter statistik yang tidak sesuai dengan kolom atau atribut dari masing-masing data pada table tersebut."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Kemudian `cek seluruh tipe data` dari masing-masing kolom yang terdapat pada table `df_day`."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 333,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -819,7 +839,6 @@
         }
       ],
       "source": [
-        "# memeriksa tipe data dari tiap kolom yang terdapat didalam df_day\n",
         "df_day.info()"
       ]
     },
@@ -827,43 +846,53 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berdasarkan data diatas, terdapat 1 tipe data pada kolom dteday yang tidak sesuai dengan data datetime."
+        "Berdasarkan informasi data pada table `df_day` diatas, dapat dilihat bahwa terdapat sebanyak 16 kolom data, 731 baris data non-null untuk semua kolom data, dengan tipe data `float` sebanyak 4 kolom, `integer` sebanyak 11 kolom, dan `object` sebanyak 1 kolom data.\n",
+        "\n",
+        "Setelah dilakukan analisis lebih lanjut, terdapat kesalahan pada 1 tipe data kolom `dteday`, yaitu yang awalnya `object` seharusnya bertipe data `datetime`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 334,
+      "execution_count": 358,
       "metadata": {},
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jumlah data df_day yang terdapat missing value:\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "instant       0\n",
-              "dteday        0\n",
-              "season        0\n",
-              "yr            0\n",
-              "mnth          0\n",
-              "holiday       0\n",
-              "weekday       0\n",
-              "workingday    0\n",
-              "weathersit    0\n",
-              "temp          0\n",
-              "atemp         0\n",
-              "hum           0\n",
-              "windspeed     0\n",
-              "casual        0\n",
-              "registered    0\n",
-              "cnt           0\n",
+              "instant              0\n",
+              "date                 0\n",
+              "season               0\n",
+              "year                 0\n",
+              "month                0\n",
+              "holiday              0\n",
+              "weekday              0\n",
+              "workingday           0\n",
+              "weather_condition    0\n",
+              "temp                 0\n",
+              "atemp                0\n",
+              "humidity             0\n",
+              "wind_speed           0\n",
+              "casual               0\n",
+              "registered           0\n",
+              "count_rent           0\n",
+              "category_days        0\n",
               "dtype: int64"
             ]
           },
-          "execution_count": 334,
+          "execution_count": 358,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# memeriksa keberadaan missing values pada df_day\n",
+        "print(\"Jumlah data df_day yang terdapat missing value:\")\n",
         "df_day.isnull().sum()"
       ]
     },
@@ -871,32 +900,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Table df_day tidak memiliki missing values sehingga **data tersebut dapat dikatakan aman**."
+        "Berdasarkan hasil pengecekan missing value atau data yang hilang (NaN) dari table `df_day`, dapat dilihat bahwa tidak terdapat data yang hilang pada table `df_day` sehingga `data tersebut dapat dikatakan aman`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 335,
+      "execution_count": 361,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah Duplikasi: 0\n"
+            "Jumlah Duplikasi pada Data df_day: 0\n"
           ]
         }
       ],
       "source": [
-        "# Memeriksa duplikasi\n",
-        "print(\"Jumlah Duplikasi:\", df_day.duplicated().sum())"
+        "print(\"Jumlah Duplikasi pada Data df_day:\", df_day.duplicated().sum())"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Kesimpulannya bahwa table df_day terdapat 0 data yang duplikasi yang berarti **semua data bersifat unik**."
+        "Berdasarkan hasil pengecekan duplikasi data pada table `df_day`, dapat dilihat bahwa tidak terdapat duplikasi data pada table `df_day` yang berarti `semua data bersifat unik`."
       ]
     },
     {
@@ -1486,7 +1514,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Memperbaiki nama beberapa kolom `'dteday','yr','mnth','weekday','weathersit','windspeed','cnt','hum'` pada table `df_day` agar lebih mudah dibaca."
+        "Memperbaiki beberapa nama kolom `'dteday','yr','mnth','weekday','weathersit','windspeed','cnt','hum'` pada table `df_day` agar lebih mudah dibaca."
       ]
     },
     {
