update assesing data: menambahkan insight dan beberapa penjelasan/storytellinng

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -449,7 +449,7 @@
         "id": "FHSiqaZp8DC1"
       },
       "source": [
-        "### 3.2. Assessing Data"
+        "### 3.2. Assessing Data (FIX)"
       ]
     },
     {
@@ -931,12 +931,19 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "#### Menilai Data df_hour"
+        "#### Menilai Data df_hour (FIX)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Memeriksa `seluruh parameter termasuk non-numerik` yang terdapat pada table `df_hour`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 336,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1264,13 +1271,26 @@
         }
       ],
       "source": [
-        "# memeriksa seluruh parameter statistik termasuk kolom non-numerik yang terdapat pada table df_hour\n",
         "df_hour.describe(include='all')"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Berdasarkan deskripsi statistik untuk table `df_hour` diatas, dapat dilihat bahwa tidak terdapat parameter statistik yang tidak sesuai dengan kolom atau atribut dari masing-masing data pada table tersebut."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Kemudian `cek seluruh tipe data` dari masing-masing kolom yang terdapat pada table `df_hour`."
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 337,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -1305,7 +1325,6 @@
         }
       ],
       "source": [
-        "# memeriksa tipe data dari tiap kolom yang terdapat pada table df_hour\n",
         "df_hour.info()"
       ]
     },
@@ -1313,44 +1332,54 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Berdasarkan data diatas, terdapat 1 tipe data pada kolom dteday yang tidak sesuai dengan data datetime."
+        "Berdasarkan informasi data pada table `df_hour` diatas, dapat dilihat bahwa terdapat sebanyak 17 kolom data, 17379 baris data non-null untuk semua kolom data, dengan tipe data `float` sebanyak 4 kolom, `integer` sebanyak 12 kolom, dan `object` sebanyak 1 kolom data.\n",
+        "\n",
+        "Setelah dilakukan analisis lebih lanjut, terdapat kesalahan pada 1 tipe data kolom `dteday`, yaitu yang awalnya `object` seharusnya bertipe data `datetime`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 338,
+      "execution_count": 363,
       "metadata": {},
       "outputs": [
         {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Jumlah data df_day yang terdapat missing value:\n"
+          ]
+        },
+        {
           "data": {
             "text/plain": [
-              "instant       0\n",
-              "dteday        0\n",
-              "season        0\n",
-              "yr            0\n",
-              "mnth          0\n",
-              "hr            0\n",
-              "holiday       0\n",
-              "weekday       0\n",
-              "workingday    0\n",
-              "weathersit    0\n",
-              "temp          0\n",
-              "atemp         0\n",
-              "hum           0\n",
-              "windspeed     0\n",
-              "casual        0\n",
-              "registered    0\n",
-              "cnt           0\n",
+              "instant              0\n",
+              "date                 0\n",
+              "season               0\n",
+              "year                 0\n",
+              "month                0\n",
+              "hour                 0\n",
+              "holiday              0\n",
+              "weekday              0\n",
+              "workingday           0\n",
+              "weather_situation    0\n",
+              "temp                 0\n",
+              "atemp                0\n",
+              "humidity             0\n",
+              "wind_speed           0\n",
+              "casual               0\n",
+              "registered           0\n",
+              "count_rental         0\n",
+              "category_days        0\n",
               "dtype: int64"
             ]
           },
-          "execution_count": 338,
+          "execution_count": 363,
           "metadata": {},
           "output_type": "execute_result"
         }
       ],
       "source": [
-        "# memeriksa keberadaan missing values pada table df_day\n",
+        "print(\"Jumlah data df_day yang terdapat missing value:\")\n",
         "df_hour.isnull().sum()"
       ]
     },
@@ -1358,32 +1387,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Table df_hour tidak memiliki missing values sehingga **data tersebut dapat dikatakan aman**."
+        "Berdasarkan hasil pengecekan missing value atau data yang hilang (NaN) dari table `df_hour`, dapat dilihat bahwa tidak terdapat data yang hilang pada table `df_hour` sehingga `data tersebut dapat dikatakan aman`."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 339,
+      "execution_count": 362,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Jumlah Duplikasi: 0\n"
+            "Jumlah Duplikasi pada Data df_day: 0\n"
           ]
         }
       ],
       "source": [
-        "# memeriksa duplikasi\n",
-        "print(\"Jumlah Duplikasi:\", df_hour.duplicated().sum())"
+        "print(\"Jumlah Duplikasi pada Data df_day:\", df_hour.duplicated().sum())"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Kesimpulannya bahwa table df_hour terdapat 0 data yang duplikasi yang berarti **semua data bersifat unik**."
+        "Berdasarkan hasil pengecekan duplikasi data pada table `df_hour`, dapat dilihat bahwa tidak terdapat duplikasi data pada table `df_hour` yang berarti `semua data bersifat unik`."
       ]
     },
     {
@@ -1393,9 +1421,9 @@
       },
       "source": [
         "**Insight:**\n",
-        "- Terdapat **kesalahan tipe data** pada kolom dteday yang memiliki tipe data **object**, sebaiknya dikonversi ke **datetime** untuk mempermudah analisis berbasis waktu.\n",
-        "- Terdapat **kesalahan tipe data** pada kolom season, yr, mnth, holiday, workingday, dan weathersit yang bertipe **integer**, sebaiknya dikonversi ke **category** agar lebih efisien dalam penyimpanan dan analisis.\n",
-        "<!-- - Kolom instant tidak diperlukan sehingga bisa diabaikan atau dihapus. -->"
+        "- Terdapat `kesalahan tipe data` kolom `dteday` pada masing-masing table `df_day` dan `df_hour` yang bertipe data `object` disarankan untuk diganti menjadi tipe data `datetime` agar mempermudah dalam analisis berbasis waktu.\n",
+        "- Terdapat `kesalahan tipe data` kolom `season, yr, mnth, holiday, weekday, workingday, weathersit` pada masing-maisng table `df_day` dan `df_hour` yang memiliki tipe data `integer` disarankan untuk diganti menjadi tipe data `category` agar lebih efisien dalam penyimpanan dan analisis.\n",
+        "- Terdapat beberapa kolom yang tidak diperlukan seperti kolom `instant`. Kolom `instant` ini hanya ID urutan baris yang tidak memiliki makna dalam analisis sehingga perlu diabaikan atau dihapus."
       ]
     },
     {
@@ -1795,7 +1823,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "##### Simpan Data"
+        "#### 3.3.3. Simpan Data df_day dan df_hour"
       ]
     },
     {
